# fastai-course

./: .gitignore  README.md  pyproject.toml
