[tool.poetry]
name = "fastai-course"
version = "0.1.0"
description = ""
authors = ["Ashley Morton-Bye <ashley.morton.bye@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.9"
numpy = "^1.19.2"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
scikit-learn = "^0.23.2"
scipy = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

